finish create & update film APIs (#4)
* finish create & update film APIs

* feat: refactor update film

---------
