# week2/internal/controller/http/v1/film_handler.go
@@ -1,6 +1,7 @@
 package v1
 
 import (
+	"errors"
 	"net/http"
 	"strconv"
 
@@ -73,6 +74,69 @@ func (handler *FilmHandler) Delete(c *gin.Context) {
 
 	// No content response on successful deletion (204)
 	c.Status(http.StatusNoContent)
+}
+
+// @Summary Create a film
+// @Description Create a film
+// @Tags Film
+// @Accept json
+// @Param  params body model.FilmRequest true "Film payload"
+// @Produce  json
+// @Router /films [post]
+// @Success 201 {object} entity.Film
+func (handler *FilmHandler) Create(c *gin.Context) {
+	var filmRequest model.FilmRequest
+
+	if err := c.ShouldBindJSON(&filmRequest); err != nil {
+		c.JSON(http.StatusBadRequest, model.HttpResponse[any]{Message: err.Error(), Data: nil})
+		return
+	}
+
+	film, err := handler.filmService.CreateFilm(c.Request.Context(), filmRequest)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, model.HttpResponse[any]{Message: err.Error(), Data: nil})
+		return
+	}
+	c.JSON(http.StatusOK, model.HttpResponse[entity.Film]{Message: "Success", Data: film})
+}
+
+// @Summary Update a film
+// @Description Update a film
+// @Tags Film
+// @Accept json
+// @Param  params body model.FilmRequest true "Film payload"
+// @Produce  json
+// @Router /films [put]
+// @Success 200 {object} entity.Film
+func (handler *FilmHandler) Update(c *gin.Context) {
+	filmId, exists := c.Params.Get("id")
+	if !exists {
+		c.JSON(http.StatusBadRequest, gin.H{"error": errors.New("id is required").Error()})
+		return
+	}
+
+	parsedId, err := strconv.ParseInt(filmId, 10, 64)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	var filmRequest model.FilmRequest
+	if err := c.ShouldBindJSON(&filmRequest); err != nil {
+		c.JSON(http.StatusBadRequest, model.HttpResponse[any]{Message: err.Error(), Data: nil})
+		return
+	}
+
+	film, err := handler.filmService.UpdateFilm(c.Request.Context(), filmRequest, parsedId)
+	if err != nil {
+		if err.Error() == "record not found" {
+			c.JSON(http.StatusBadRequest, model.HttpResponse[any]{Message: "film not found", Data: nil})
+			return
+		}
+		c.JSON(http.StatusInternalServerError, model.HttpResponse[any]{Message: err.Error(), Data: nil})
+		return
+	}
+	c.JSON(http.StatusOK, model.HttpResponse[entity.Film]{Message: "Success", Data: film})
 }
 
 // @Summary Get all films
